@@ -1,0 +1,14 @@
+usbMouse 0.3.1 based on usbMouse 0.3
+=================
+
+Since I cannot compile the downloaded usbMouse 0.3 from
+https://www.aps.anl.gov/epics/download/modules/index.php
+I would like to re-arrange sources in order to compile and
+to execute an IOC.
+
+Please look at the original README file also.
+
+
+Jeong Han Lee
+European Spallation Source, Lund, Sweden
+Thursday, May 18 17:10:19 CEST 2017
