@@ -4,5 +4,7 @@
 # directory whenever this file is changed or any external module
 # pointed to by this RELEASE file is rebuilt.
 
-ASYN       = /usr/local/epics/R3.14.12/modules/soft/synApps_5_5/support/asyn4-16
-EPICS_BASE = /usr/local/epics/R3.14.12/base
+#ASYN       = /usr/local/epics/R3.14.12/modules/soft/synApps_5_5/support/asyn4-16
+#EPICS_BASE = /usr/local/epics/R3.14.12/base
+ASYN=${EPICS_MODULES}/asyn
+EPICS_BASE=${EPICS_PATH}/epics-base
