@@ -1,5 +1,5 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
-ARCH = darwin-x86
+ARCH = $(EPICS_HOST_ARCH)
 TARGETS = envPaths
 include $(TOP)/configure/RULES.ioc
