@@ -1,3 +1,6 @@
+2017-03-18 17:03  jhlee
+        *  works with the recent EPICS base	
+
 2011-07-21 16:04  tag R0-3
 
 2011-07-21 16:04  wenorum
